syntax = "proto3";

import "Task.proto";
import "TaskId.proto";

message TransportationTask {
  TaskId id = 1;
  Task task = 2;
  TaskId parent = 3;
}